add_executable(01-main 01-main.cpp)
add_executable(02-by-ref-by-val 02-by-ref-by-val.cpp)
add_executable(03-value-semantics 03-value-semantics.cpp)
add_executable(04-anonymous-namespaces 04-anonymous-namespaces.cpp)
add_executable(05-default-data-members 05-default-data-members.cpp)
# add_executable(06-const-objects 06-const-objects.cpp)
add_executable(07-iterator 07-iterator.cpp)
add_executable(08 08.cpp)
# add_executable(09 09.cpp)
add_executable(10-runtime-polymorphism 10-runtime-polymorphism.cpp)
add_executable(11-destructors 11-destructors.cpp)
add_executable(12-templates 12-templates.cpp)
add_executable(13-variadic-templates 13-variadic-templates.cpp)
add_executable(14-member-templates 14-member-templates.cpp)
add_executable(15-decltype 15-decltype.cpp)
add_executable(16-inheritance 16-inheritance.cpp)
add_executable(17-metaprogramming 17-metaprogramming.cpp)
add_executable(18-static-var 18-static-var.cpp)
add_executable(19-constexpr 19-constexpr.cpp)
add_executable(20-concepts 20-concepts.cpp)
add_executable(21-variadic-templates 21-variadic-templates.cpp)
add_executable(22-arrays 22-arrays.cpp)
add_executable(23-vectors 23-vectors.cpp)
add_executable(24-type-limits 24-type-limits.cpp)
add_executable(25-top-bottom-lv-const 25-top-bottom-lv-const.cpp)
add_executable(26-priority_queue 26-priority_queue.cpp)
add_executable(27-in-class-initialiser 27-in-class-initialiser.cpp)
add_executable(28-operator-overload 28-operator-overload.cpp)
add_executable(29-value-move-semantics 29-value-move-semantics.cpp)
add_executable(30-next_permutation 30_next_permutation.cpp)
add_executable(31-int-double-implicit-cast 31-int-double-implicit-cast.cpp)
# add_executable(32-const-ref 32-const-ref.cpp)
add_executable(33-reference-to-null 33-reference-to-null.cpp)
add_executable(34-ref-to-heap-mem-freed 34-ref-to-heap-mem-freed.cpp)
add_executable(35-sizeof-ref 35-sizeof-ref.cpp)
add_executable(36-map-reduce 36-map-reduce.cpp)
add_executable(37-static-var 37-static-var.cpp)
add_executable(38-improper-destructor 38-improper-destructor.cpp)
add_executable(39-memory-issues 39-memory-issues.cpp)
add_executable(40-looping-through-const 40-looping-through-const.cpp)
# add_executable(41-iterator-template 41-iterator-template.cpp)
add_executable(42-friend 42-friend.cpp)
add_executable(43-exceptions 43-exceptions.cpp)
add_executable(44-exception-object-lifetime 44-exception-object-lifetime.cpp)
add_executable(45-heap-memory 45-heap-memory.cpp)
add_executable(46-constructors 46-constructors.cpp)
add_executable(47-exception-stack-unwind 47-exception-stack-unwind.cpp)
add_executable(48-heap-vector 48-heap-vector.cpp)
add_executable(49-unique-pointer 49-unique-pointer.cpp)
add_executable(50-make-unique 50-make-unique.cpp)
add_executable(51-fallthrough 51-fallthrough.cpp)
